--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="drawer_item_open_source">Open Source</string>
     <string name="drawer_item_contact">Contact</string>
     <string name="ok">ok</string>
+    <string name="menu_item_add">Add</string>
+    <string name="nav_menu_item_dictionaries">Словари</string>
 </resources>
