--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,33 +1,41 @@
 <resources>
     <string name="app_name">Lingowl</string>
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-    </string-array>
+
+    <!-- Nav Drawer -->
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    <string name="action_websearch">Web search</string>
-    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+
     <string name="action_settings">Settings</string>
-    <string name="drawer_item_home">Home</string>
-    <string name="drawer_item_free_play">Free Play</string>
-    <string name="drawer_item_custom">Custom</string>
-    <string name="drawer_item_settings">Settings</string>
-    <string name="drawer_item_help">Help</string>
-    <string name="drawer_item_open_source">Open Source</string>
-    <string name="drawer_item_contact">Contact</string>
     <string name="ok">ok</string>
-    <string name="menu_item_add">Add</string>
+    <!--<string name="menu_item_add">Add</string>-->
     <string name="nav_menu_item_dictionaries">Словари</string>
     <string name="category_all_words">Все слова</string>
+
+    <!-- Popups -->
     <string name="popup_action_open">Открыть</string>
     <string name="popup_action_edit">Изменить</string>
     <string name="popup_action_delete">Удалить</string>
     <string name="error">Ошибка</string>
+
+    <!-- Toolbar -->
+    <string name="toolbar_title_categories">Категории (%1$s) </string>
+    <string name="toolbar_title_dictionaries">Словари</string>
+
+    <!-- Dialogs -->
+    <string name="dialog_category_added">Категория добавлена</string>
+    <string name="dialog_category_input_category_name">Введите название категории!</string>
+
+    <!-- Translation -->
+    <string name="translation_error">Ошибка, невозможно перевести введенное слово</string>
+    <string name="translation_check_input">Проверьте введенное слово</string>
+
+
+    <string name="word_created">Новое слово добавлено</string>
+
+    <!-- Languages -->
+    <string name="dictionary_english">Английский</string>
+    <string name="dictionary_german">Немецкий</string>
+    <string name="dictionary_spanish">Испанский</string>
+    <string name="dictionary_french">Франзузский</string>
+    <string name="dictionary_selected">(выбран)</string>
 </resources>
